# star

star/: Cargo.toml  Trunk.toml  index.html  index.scss
star/src/: components.rs  main.rs  state.rs  storage.rs
