[package]
name = "star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-timer = "0.2.5"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-hooks = "0.1"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-timers = "0.2.4"
serde = "1.0.137"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "HtmlAudioElement",
    "HtmlInputElement"
]