[package]
name = "star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-hooks = "0.1"
serde = "1.0.137"
chrono = { version = "0.4", features = ["wasmbind"] }
wasm-timer = "0.2.5"
gloo-timers = "0.2.4"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "HtmlAudioElement",
    "HtmlInputElement",
    "Storage",
]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true